projects/auto-scaling-application/terraform/ec2.tf
data "aws_ami" "ubuntu" {

  owners      = ["amazon"]
  most_recent = true
  name_regex  = "ubuntu"

  filter {

    name   = "architecture"
    values = ["x86_64"]
  }
}

#criando uma key pair para a ec2

resource "aws_key_pair" "keypair" {

  key_name = "asg-key"

  public_key = tls_private_key.rsa.public_key_openssh

}

#escolhendo o tipo de key

resource "tls_private_key" "rsa" {

  algorithm = "RSA"

  rsa_bits = 4096

}

#criando um arquivo na maquina para deixar a secret key

resource "local_file" "tf-key" {

  content = tls_private_key.rsa.private_key_pem

  filename = "key/asgkey.pem"

}




resource "aws_launch_template" "this" {
  name_prefix   = "terraform-"
  image_id      = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  key_name      = aws_key_pair.keypair.key_name
  user_data     = filebase64("./ec2_setup.sh")

  monitoring {
    enabled = true
  }


  network_interfaces {
    associate_public_ip_address = true
    delete_on_termination       = true
    security_groups             = [aws_security_group.autoscaling.id]
  }
}


resource "aws_autoscaling_group" "this" {
  name                = "terraform-autoscaling"
  vpc_zone_identifier = [aws_subnet.this["pub_a"].id, aws_subnet.this["pub_b"].id]
  max_size            = 5
  min_size            = 2

  health_check_grace_period = 240
  health_check_type         = "ELB"
  force_delete              = true
  target_group_arns         = [aws_lb_target_group.this.arn]

  launch_template {
    id      = aws_launch_template.this.id
    version = aws_launch_template.this.latest_version
  }
}


resource "aws_autoscaling_policy" "scaleup" {
  name                   = "Scale Up"
  autoscaling_group_name = aws_autoscaling_group.this.name
  adjustment_type        = "ChangeInCapacity"
  scaling_adjustment     = "1"
  cooldown               = "180"
  policy_type            = "SimpleScaling"

}

resource "aws_autoscaling_policy" "scaledown" {
  name                   = "Scale Down"
  autoscaling_group_name = aws_autoscaling_group.this.name
  adjustment_type        = "ChangeInCapacity"
  scaling_adjustment     = "-1"
  cooldown               = "180"
  policy_type            = "SimpleScaling"

}




resource "aws_instance" "jenkins" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  
  key_name      = aws_key_pair.keypair.key_name
  vpc_security_group_ids = [aws_security_group.jenkins.id]
  subnet_id             = aws_subnet.this["priv_b"].id
  availability_zone     = "${var.region}b"

  tags = merge(local.common_tags, { Name = "Jenkins Machine" })
}
